# gtk-icon-cache

./: Cargo.toml  README.md
src/: lib.rs
test/caches/: icon-theme.cache  test1.cache
