[package]
name = "gtk-icon-cache"
version = "0.2.2"
authors = ["石博文 <sbw@sbw.so>"]
description = "A gtk-icon-cache file reader"
homepage = "https://github.com/sbwtw/gtk-icon-cache"
repository = "https://github.com/sbwtw/gtk-icon-cache"
keywords = ["gtk", "icon", "cache"]
categories = ["caching", "data-structures"]
license = "GPL-3.0"

[dependencies]
memmap = "0.6"
log = "0.4"
